# playful-afk

./: .gitignore  README.md  Rust.md  godo.wasm  index.html  index.manifest.json  index.pck  index.service.worker.js
.github/workflows/: ci-main.yaml
afk/: export.html  export_presets.cfg  godo.gdextension  godo.gdextension.uid  head_include.html  icon.svg.import  project.godot  virtual_pet_afk.png.import
afk/addons/godo/: godo.gdextension  godo.gdextension.uid
afk/gameplay/: gameplay_cache.gd  gameplay_cache.gd.uid
afk/gameplay/introduction/: introduction.gd  introduction.gd.uid  introduction.tscn
afk/gameplay/main/: main.gd  main.gd.uid  main.tscn
afk/gameplay/title/: title.gd  title.gd.uid  title.tscn
afk/gameplay/transition/: parallax-demon-woods-bg.png.import  parallax-demon-woods-close-trees.png.import  parallax-demon-woods-far-trees.png.import  (+4 more)
afk/scripts/: supabase-config.js
afk/utils/: bitwise.gd  bitwise.gd.uid  name_generator.gd  name_generator.gd.uid  ulid.gd  ulid.gd.uid
docs/: adding-new-npcs.md
rust/: Cargo.toml  fix_bytemap_methods.py  fix_holymap_methods.py  fix_specific_ulid_refs.py  fix_ulid_refs.py  fix_value_access.py  sync.sh
rust/src/: bytemap.rs  ecs.rs  fix_safe_wrappers.py  holymap.rs  inventory_data_warehouse.rs  lib.rs  map_data_warehouse.rs  name_generator.rs  npc_data_warehouse.rs  npc_data_warehouse.rs.backup  npc_data_warehouse.rs.bak  npc_data_warehouse.rs.bak2  npc_data_warehouse.rs.bak3  npc_data_warehouse.rs.bak4  npc_data_warehouse.rs.bak5  npc_data_warehouse.rs.bak6
rust/src/animation/: effect_pool.rs  mod.rs
(+274 files in other folders)
