[package]
name = "godo"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
arc-swap = "1.7.1"
bevy = { version = "0.17.2", default-features = false, features = [
    "bevy_asset",
    "bevy_state",
] }
dashmap = "6.1.0"
godot = { version = "0.3.5", features = [
    "experimental-wasm",
    "lazy-function-tables",
] }
once_cell = "1.21.3"
papaya = "0.2.3"
